Resolve some naming conflicts between hw0 and others.

--- a/hw0.ipynb
+++ b/hw0.ipynb
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {
     "id": "ARkiDASTr-Ad",
     "outputId": "4df3ca46-11ff-4ccb-c24c-875d4a46b7f1",
@@ -181,8 +181,8 @@
      "base_uri": "https://localhost:8080/"
     },
     "ExecuteTime": {
-     "end_time": "2024-03-19T22:49:52.312366Z",
-     "start_time": "2024-03-19T22:49:51.472401Z"
+     "end_time": "2024-03-21T10:56:44.680152Z",
+     "start_time": "2024-03-21T10:56:43.745804Z"
     }
    },
    "outputs": [
@@ -198,7 +198,7 @@
       "\r\n",
       "tests/hw0/test_simple_ml.py \u001B[32m.\u001B[0m\u001B[32m                                            [100%]\u001B[0m\r\n",
       "\r\n",
-      "\u001B[32m======================= \u001B[32m\u001B[1m1 passed\u001B[0m, \u001B[33m29 deselected\u001B[0m\u001B[32m in 0.28s\u001B[0m\u001B[32m =======================\u001B[0m\r\n"
+      "\u001B[32m======================= \u001B[32m\u001B[1m1 passed\u001B[0m, \u001B[33m29 deselected\u001B[0m\u001B[32m in 0.30s\u001B[0m\u001B[32m =======================\u001B[0m\r\n"
      ]
     }
    ],
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {
     "id": "1irWxkJmr-Ae",
     "outputId": "7e669745-7596-418c-a707-9ac93cbb91cd",
@@ -236,8 +236,8 @@
      "base_uri": "https://localhost:8080/"
     },
     "ExecuteTime": {
-     "end_time": "2024-03-19T22:49:56.022294Z",
-     "start_time": "2024-03-19T22:49:55.090659Z"
+     "end_time": "2024-03-21T10:56:54.093842Z",
+     "start_time": "2024-03-21T10:56:53.209482Z"
     }
    },
    "outputs": [
@@ -253,7 +253,7 @@
       "\r\n",
       "tests/hw0/test_simple_ml.py \u001B[32m.\u001B[0m\u001B[32m                                            [100%]\u001B[0m\r\n",
       "\r\n",
-      "\u001B[32m======================= \u001B[32m\u001B[1m1 passed\u001B[0m, \u001B[33m29 deselected\u001B[0m\u001B[32m in 0.31s\u001B[0m\u001B[32m =======================\u001B[0m\r\n"
+      "\u001B[32m======================= \u001B[32m\u001B[1m1 passed\u001B[0m, \u001B[33m29 deselected\u001B[0m\u001B[32m in 0.28s\u001B[0m\u001B[32m =======================\u001B[0m\r\n"
      ]
     }
    ],
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {
     "id": "Q9NiCSRwr-Af",
     "colab": {
@@ -383,8 +383,8 @@
     },
     "outputId": "040b73e6-c1a9-4f13-a226-9f44c06714c4",
     "ExecuteTime": {
-     "end_time": "2024-03-19T22:50:04.542100Z",
-     "start_time": "2024-03-19T22:50:03.233722Z"
+     "end_time": "2024-03-21T10:57:13.086989Z",
+     "start_time": "2024-03-21T10:57:11.846251Z"
     }
    },
    "outputs": [
@@ -400,7 +400,7 @@
       "\r\n",
       "tests/hw0/test_simple_ml.py \u001B[32m.\u001B[0m\u001B[32m                                            [100%]\u001B[0m\r\n",
       "\r\n",
-      "\u001B[32m======================= \u001B[32m\u001B[1m1 passed\u001B[0m, \u001B[33m29 deselected\u001B[0m\u001B[32m in 0.69s\u001B[0m\u001B[32m =======================\u001B[0m\r\n"
+      "\u001B[32m======================= \u001B[32m\u001B[1m1 passed\u001B[0m, \u001B[33m29 deselected\u001B[0m\u001B[32m in 0.64s\u001B[0m\u001B[32m =======================\u001B[0m\r\n"
      ]
     }
    ],
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "metadata": {
     "id": "cg_1UgB-r-Ag",
     "colab": {
@@ -467,8 +467,8 @@
     },
     "outputId": "e593d25d-142a-477a-b59a-83cf37edfb79",
     "ExecuteTime": {
-     "end_time": "2024-03-19T22:52:03.487622Z",
-     "start_time": "2024-03-19T22:52:02.251957Z"
+     "end_time": "2024-03-21T10:57:55.252629Z",
+     "start_time": "2024-03-21T10:57:53.918858Z"
     }
    },
    "outputs": [
@@ -480,16 +480,16 @@
       "platform linux -- Python 3.12.1, pytest-8.1.1, pluggy-1.4.0\r\n",
       "rootdir: /home/bobboli/dlsys\r\n",
       "plugins: anyio-4.2.0\r\n",
-      "collected 6 items / 5 deselected / 1 selected                                  \u001B[0m\r\n",
+      "collected 30 items / 29 deselected / 1 selected                                \u001B[0m\r\n",
       "\r\n",
       "tests/hw0/test_simple_ml.py \u001B[32m.\u001B[0m\u001B[32m                                            [100%]\u001B[0m\r\n",
       "\r\n",
-      "\u001B[32m======================= \u001B[32m\u001B[1m1 passed\u001B[0m, \u001B[33m5 deselected\u001B[0m\u001B[32m in 0.68s\u001B[0m\u001B[32m ========================\u001B[0m\r\n"
+      "\u001B[32m======================= \u001B[32m\u001B[1m1 passed\u001B[0m, \u001B[33m29 deselected\u001B[0m\u001B[32m in 0.63s\u001B[0m\u001B[32m =======================\u001B[0m\r\n"
      ]
     }
    ],
    "source": [
-    "!python3 -m pytest -k \"softmax_loss\""
+    "!python3 -m pytest -k \"softmax_loss_hw0\""
    ]
   },
   {
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {
     "id": "-kK8co45r-Ag",
     "colab": {
@@ -568,8 +568,8 @@
     },
     "outputId": "679faed4-cc77-4502-b880-5fe662b17ab7",
     "ExecuteTime": {
-     "end_time": "2024-03-19T22:52:10.490293Z",
-     "start_time": "2024-03-19T22:52:09.269828Z"
+     "end_time": "2024-03-21T10:58:21.615033Z",
+     "start_time": "2024-03-21T10:58:20.399699Z"
     }
    },
    "outputs": [
@@ -581,11 +581,11 @@
       "platform linux -- Python 3.12.1, pytest-8.1.1, pluggy-1.4.0\r\n",
       "rootdir: /home/bobboli/dlsys\r\n",
       "plugins: anyio-4.2.0\r\n",
-      "collected 6 items / 5 deselected / 1 selected                                  \u001B[0m\r\n",
+      "collected 30 items / 29 deselected / 1 selected                                \u001B[0m\r\n",
       "\r\n",
       "tests/hw0/test_simple_ml.py \u001B[32m.\u001B[0m\u001B[32m                                            [100%]\u001B[0m\r\n",
       "\r\n",
-      "\u001B[32m======================= \u001B[32m\u001B[1m1 passed\u001B[0m, \u001B[33m5 deselected\u001B[0m\u001B[32m in 0.64s\u001B[0m\u001B[32m ========================\u001B[0m\r\n"
+      "\u001B[32m======================= \u001B[32m\u001B[1m1 passed\u001B[0m, \u001B[33m29 deselected\u001B[0m\u001B[32m in 0.59s\u001B[0m\u001B[32m =======================\u001B[0m\r\n"
      ]
     }
    ],
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "metadata": {
     "id": "VhDjxMJYr-Ah",
     "outputId": "27022418-ac65-4234-a1ee-f3c238358d06",
@@ -640,8 +640,8 @@
      "base_uri": "https://localhost:8080/"
     },
     "ExecuteTime": {
-     "end_time": "2024-03-19T22:53:34.336652Z",
-     "start_time": "2024-03-19T22:53:31.630760Z"
+     "end_time": "2024-03-21T10:58:41.481769Z",
+     "start_time": "2024-03-21T10:58:38.889037Z"
     }
    },
    "outputs": [
@@ -671,7 +671,7 @@
     "import sys\n",
     "sys.path.append(\"src/\")\n",
     "sys.path.append(\"apps/\")\n",
-    "from simple_ml import train_softmax, parse_mnist\n",
+    "from simple_ml_hw0 import train_softmax, parse_mnist\n",
     "\n",
     "X_tr, y_tr = parse_mnist(\"data/train-images-idx3-ubyte.gz\",\n",
     "                         \"data/train-labels-idx1-ubyte.gz\")\n",
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 45,
    "metadata": {
     "id": "lgA0AEsOr-Ah",
     "colab": {
@@ -733,8 +733,8 @@
     },
     "outputId": "abc39614-3d77-4716-d3cc-2df6fd32bb3b",
     "ExecuteTime": {
-     "end_time": "2024-03-19T22:53:44.210543Z",
-     "start_time": "2024-03-19T22:53:41.918063Z"
+     "end_time": "2024-03-21T11:03:04.698645Z",
+     "start_time": "2024-03-21T11:03:02.725804Z"
     }
    },
    "outputs": [
@@ -746,16 +746,16 @@
       "platform linux -- Python 3.12.1, pytest-8.1.1, pluggy-1.4.0\r\n",
       "rootdir: /home/bobboli/dlsys\r\n",
       "plugins: anyio-4.2.0\r\n",
-      "collected 6 items / 5 deselected / 1 selected                                  \u001B[0m\r\n",
+      "collected 30 items / 29 deselected / 1 selected                                \u001B[0m\r\n",
       "\r\n",
       "tests/hw0/test_simple_ml.py \u001B[32m.\u001B[0m\u001B[32m                                            [100%]\u001B[0m\r\n",
       "\r\n",
-      "\u001B[32m======================= \u001B[32m\u001B[1m1 passed\u001B[0m, \u001B[33m5 deselected\u001B[0m\u001B[32m in 1.67s\u001B[0m\u001B[32m ========================\u001B[0m\r\n"
+      "\u001B[32m======================= \u001B[32m\u001B[1m1 passed\u001B[0m, \u001B[33m29 deselected\u001B[0m\u001B[32m in 1.32s\u001B[0m\u001B[32m =======================\u001B[0m\r\n"
      ]
     }
    ],
    "source": [
-    "!python3 -m pytest -k \"nn_epoch\""
+    "!python3 -m pytest -k \"nn_epoch_hw0\""
    ]
   },
   {
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 51,
    "metadata": {
     "id": "mm4U8APir-Ah",
     "colab": {
@@ -799,8 +799,8 @@
     },
     "outputId": "3d504cd5-b601-415d-e189-59e5cae59cc2",
     "ExecuteTime": {
-     "end_time": "2024-03-19T22:54:23.276754Z",
-     "start_time": "2024-03-19T22:53:47.247736Z"
+     "end_time": "2024-03-21T11:08:15.232041Z",
+     "start_time": "2024-03-21T11:07:37.096771Z"
     }
    },
    "outputs": [
@@ -841,11 +841,11 @@
     "\n",
     "# Reload the simple_ml module which has been cached from the earlier experiment\n",
     "import importlib\n",
-    "import simple_ml\n",
-    "importlib.reload(simple_ml)\n",
+    "import simple_ml_hw0\n",
+    "importlib.reload(simple_ml_hw0)\n",
     "\n",
     "sys.path.append(\"src/\")\n",
-    "from simple_ml import train_nn, parse_mnist\n",
+    "from simple_ml_hw0 import train_nn, parse_mnist\n",
     "\n",
     "X_tr, y_tr = parse_mnist(\"data/train-images-idx3-ubyte.gz\",\n",
     "                         \"data/train-labels-idx1-ubyte.gz\")\n",
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 48,
    "metadata": {
     "id": "yXUxOQytr-Ai",
     "colab": {
@@ -959,8 +959,8 @@
     },
     "outputId": "b4ebb4e9-e334-4740-b03b-e50909e4503f",
     "ExecuteTime": {
-     "end_time": "2024-03-19T22:57:22.984351Z",
-     "start_time": "2024-03-19T22:57:17.932052Z"
+     "end_time": "2024-03-21T11:04:26.933876Z",
+     "start_time": "2024-03-21T11:04:21.469460Z"
     }
    },
    "outputs": [
@@ -973,11 +973,11 @@
       "platform linux -- Python 3.12.1, pytest-8.1.1, pluggy-1.4.0\r\n",
       "rootdir: /home/bobboli/dlsys\r\n",
       "plugins: anyio-4.2.0\r\n",
-      "collected 6 items / 5 deselected / 1 selected                                  \u001B[0m\r\n",
+      "collected 30 items / 29 deselected / 1 selected                                \u001B[0m\r\n",
       "\r\n",
       "tests/hw0/test_simple_ml.py \u001B[32m.\u001B[0m\u001B[32m                                            [100%]\u001B[0m\r\n",
       "\r\n",
-      "\u001B[32m======================= \u001B[32m\u001B[1m1 passed\u001B[0m, \u001B[33m5 deselected\u001B[0m\u001B[32m in 0.53s\u001B[0m\u001B[32m ========================\u001B[0m\r\n"
+      "\u001B[32m======================= \u001B[32m\u001B[1m1 passed\u001B[0m, \u001B[33m29 deselected\u001B[0m\u001B[32m in 0.64s\u001B[0m\u001B[32m =======================\u001B[0m\r\n"
      ]
     }
    ],
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 54,
    "metadata": {
     "id": "HAQNlKOgr-Aj",
     "colab": {
@@ -1027,8 +1027,8 @@
     },
     "outputId": "b3e80485-30e4-4331-e927-be9544904c80",
     "ExecuteTime": {
-     "end_time": "2024-03-19T22:58:09.442868Z",
-     "start_time": "2024-03-19T22:58:02.352946Z"
+     "end_time": "2024-03-21T11:09:30.455095Z",
+     "start_time": "2024-03-21T11:09:23.456398Z"
     }
    },
    "outputs": [
@@ -1060,10 +1060,10 @@
     "\n",
     "# Reload the simple_ml module to include the newly-compiled C++ extension\n",
     "import importlib\n",
-    "import simple_ml\n",
-    "importlib.reload(simple_ml)\n",
+    "import simple_ml_hw0\n",
+    "importlib.reload(simple_ml_hw0)\n",
     "\n",
-    "from simple_ml import train_softmax, parse_mnist\n",
+    "from simple_ml_hw0 import train_softmax, parse_mnist\n",
     "\n",
     "X_tr, y_tr = parse_mnist(\"data/train-images-idx3-ubyte.gz\",\n",
     "                         \"data/train-labels-idx1-ubyte.gz\")\n",
