--- a/hw1.ipynb
+++ b/hw1.ipynb
@@ -15,32 +15,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-19T22:59:37.893370Z",
+     "start_time": "2024-03-19T22:59:37.890317Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Code to set up the assignment\n",
-    "from google.colab import drive\n",
-    "drive.mount('/content/drive')\n",
-    "%cd /content/drive/MyDrive/\n",
-    "!mkdir -p 10714\n",
-    "%cd /content/drive/MyDrive/10714\n",
-    "!git clone https://github.com/dlsys10714/hw1.git\n",
-    "%cd /content/drive/MyDrive/10714/hw1\n",
-    "\n",
-    "!pip3 install --upgrade --no-deps git+https://github.com/dlsys10714/mugrade.git\n",
-    "!pip3 install numdifftools"
+    "# from google.colab import drive\n",
+    "# drive.mount('/content/drive')\n",
+    "# %cd /content/drive/MyDrive/\n",
+    "# !mkdir -p 10714\n",
+    "# %cd /content/drive/MyDrive/10714\n",
+    "# !git clone https://github.com/dlsys10714/hw1.git\n",
+    "# %cd /content/drive/MyDrive/10714/hw1\n",
+    "# \n",
+    "# !pip3 install --upgrade --no-deps git+https://github.com/dlsys10714/mugrade.git\n",
+    "# !pip3 install numdifftools"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
     "id": "Q9vtSr-B3RMx",
-    "outputId": "10894b4a-cced-49c4-917b-73cc51a07d30"
+    "outputId": "10894b4a-cced-49c4-917b-73cc51a07d30",
+    "ExecuteTime": {
+     "end_time": "2024-03-19T22:59:37.985564Z",
+     "start_time": "2024-03-19T22:59:37.913672Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -112,30 +121,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 27,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-20T21:53:36.629937Z",
+     "start_time": "2024-03-20T21:53:35.708257Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
-      "platform darwin -- Python 3.9.7, pytest-6.2.4, py-1.10.0, pluggy-0.13.1 -- /Users/zkolter/opt/anaconda3/bin/python3\n",
-      "cachedir: .pytest_cache\n",
-      "rootdir: /Users/zkolter/Dropbox/class/10-714/homework/hw1\n",
-      "plugins: pytest_check-1.0.4, anyio-2.2.0\n",
-      "collected 21 items / 13 deselected / 8 selected                                \u001b[0m\n",
-      "\n",
-      "tests/test_autograd_hw.py::test_divide_forward \u001b[32mPASSED\u001b[0m\u001b[32m                    [ 12%]\u001b[0m\n",
-      "tests/test_autograd_hw.py::test_divide_scalar_forward \u001b[32mPASSED\u001b[0m\u001b[32m             [ 25%]\u001b[0m\n",
-      "tests/test_autograd_hw.py::test_matmul_forward \u001b[32mPASSED\u001b[0m\u001b[32m                    [ 37%]\u001b[0m\n",
-      "tests/test_autograd_hw.py::test_summation_forward \u001b[32mPASSED\u001b[0m\u001b[32m                 [ 50%]\u001b[0m\n",
-      "tests/test_autograd_hw.py::test_broadcast_to_forward \u001b[32mPASSED\u001b[0m\u001b[32m              [ 62%]\u001b[0m\n",
-      "tests/test_autograd_hw.py::test_reshape_forward \u001b[32mPASSED\u001b[0m\u001b[32m                   [ 75%]\u001b[0m\n",
-      "tests/test_autograd_hw.py::test_negate_forward \u001b[32mPASSED\u001b[0m\u001b[32m                    [ 87%]\u001b[0m\n",
-      "tests/test_autograd_hw.py::test_transpose_forward \u001b[32mPASSED\u001b[0m\u001b[32m                 [100%]\u001b[0m\n",
-      "\n",
-      "\u001b[32m======================= \u001b[32m\u001b[1m8 passed\u001b[0m, \u001b[33m13 deselected\u001b[0m\u001b[32m in 0.48s\u001b[0m\u001b[32m =======================\u001b[0m\n"
+      "\u001B[1m============================= test session starts ==============================\u001B[0m\r\n",
+      "platform linux -- Python 3.12.1, pytest-8.1.1, pluggy-1.4.0 -- /home/bobboli/miniconda3/bin/python3\r\n",
+      "cachedir: .pytest_cache\r\n",
+      "rootdir: /home/bobboli/dlsys\r\n",
+      "plugins: anyio-4.2.0\r\n",
+      "collected 30 items / 20 deselected / 10 selected                               \u001B[0m\r\n",
+      "\r\n",
+      "tests/hw1/test_autograd_hw.py::test_power_scalar_forward \u001B[32mPASSED\u001B[0m\u001B[32m          [ 10%]\u001B[0m\r\n",
+      "tests/hw1/test_autograd_hw.py::test_ewisepow_forward \u001B[32mPASSED\u001B[0m\u001B[32m              [ 20%]\u001B[0m\r\n",
+      "tests/hw1/test_autograd_hw.py::test_divide_forward \u001B[32mPASSED\u001B[0m\u001B[32m                [ 30%]\u001B[0m\r\n",
+      "tests/hw1/test_autograd_hw.py::test_divide_scalar_forward \u001B[32mPASSED\u001B[0m\u001B[32m         [ 40%]\u001B[0m\r\n",
+      "tests/hw1/test_autograd_hw.py::test_matmul_forward \u001B[32mPASSED\u001B[0m\u001B[32m                [ 50%]\u001B[0m\r\n",
+      "tests/hw1/test_autograd_hw.py::test_summation_forward \u001B[32mPASSED\u001B[0m\u001B[32m             [ 60%]\u001B[0m\r\n",
+      "tests/hw1/test_autograd_hw.py::test_broadcast_to_forward \u001B[32mPASSED\u001B[0m\u001B[32m          [ 70%]\u001B[0m\r\n",
+      "tests/hw1/test_autograd_hw.py::test_reshape_forward \u001B[32mPASSED\u001B[0m\u001B[32m               [ 80%]\u001B[0m\r\n",
+      "tests/hw1/test_autograd_hw.py::test_negate_forward \u001B[32mPASSED\u001B[0m\u001B[32m                [ 90%]\u001B[0m\r\n",
+      "tests/hw1/test_autograd_hw.py::test_transpose_forward \u001B[32mPASSED\u001B[0m\u001B[32m             [100%]\u001B[0m\r\n",
+      "\r\n",
+      "\u001B[32m====================== \u001B[32m\u001B[1m10 passed\u001B[0m, \u001B[33m20 deselected\u001B[0m\u001B[32m in 0.31s\u001B[0m\u001B[32m =======================\u001B[0m\r\n"
      ]
     }
    ],
@@ -272,38 +288,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
     "id": "etSSMzD0fee0",
     "outputId": "2e8d28f1-9dee-4ad0-d9c3-9d9bdb1c30ea",
-    "scrolled": true
+    "scrolled": true,
+    "ExecuteTime": {
+     "end_time": "2024-03-20T22:57:42.314041Z",
+     "start_time": "2024-03-20T22:57:41.401082Z"
+    }
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
-      "platform darwin -- Python 3.9.7, pytest-6.2.4, py-1.10.0, pluggy-0.13.1 -- /Users/zkolter/opt/anaconda3/bin/python3\n",
-      "cachedir: .pytest_cache\n",
-      "rootdir: /Users/zkolter/Dropbox/class/10-714/homework/hw1\n",
-      "plugins: pytest_check-1.0.4, anyio-2.2.0\n",
-      "collected 21 items / 12 deselected / 9 selected                                \u001b[0m\n",
-      "\n",
-      "tests/test_autograd_hw.py::test_divide_backward \u001b[32mPASSED\u001b[0m\u001b[32m                   [ 11%]\u001b[0m\n",
-      "tests/test_autograd_hw.py::test_divide_scalar_backward \u001b[32mPASSED\u001b[0m\u001b[32m            [ 22%]\u001b[0m\n",
-      "tests/test_autograd_hw.py::test_matmul_simple_backward \u001b[32mPASSED\u001b[0m\u001b[32m            [ 33%]\u001b[0m\n",
-      "tests/test_autograd_hw.py::test_matmul_batched_backward \u001b[32mPASSED\u001b[0m\u001b[32m           [ 44%]\u001b[0m\n",
-      "tests/test_autograd_hw.py::test_reshape_backward \u001b[32mPASSED\u001b[0m\u001b[32m                  [ 55%]\u001b[0m\n",
-      "tests/test_autograd_hw.py::test_negate_backward \u001b[32mPASSED\u001b[0m\u001b[32m                   [ 66%]\u001b[0m\n",
-      "tests/test_autograd_hw.py::test_transpose_backward \u001b[32mPASSED\u001b[0m\u001b[32m                [ 77%]\u001b[0m\n",
-      "tests/test_autograd_hw.py::test_broadcast_to_backward \u001b[32mPASSED\u001b[0m\u001b[32m             [ 88%]\u001b[0m\n",
-      "tests/test_autograd_hw.py::test_summation_backward \u001b[32mPASSED\u001b[0m\u001b[32m                [100%]\u001b[0m\n",
-      "\n",
-      "\u001b[32m======================= \u001b[32m\u001b[1m9 passed\u001b[0m, \u001b[33m12 deselected\u001b[0m\u001b[32m in 0.53s\u001b[0m\u001b[32m =======================\u001b[0m\n"
+      "\u001B[1m============================= test session starts ==============================\u001B[0m\r\n",
+      "platform linux -- Python 3.12.1, pytest-8.1.1, pluggy-1.4.0 -- /home/bobboli/miniconda3/bin/python3\r\n",
+      "cachedir: .pytest_cache\r\n",
+      "rootdir: /home/bobboli/dlsys\r\n",
+      "plugins: anyio-4.2.0\r\n",
+      "collected 30 items / 20 deselected / 10 selected                               \u001B[0m\r\n",
+      "\r\n",
+      "tests/hw1/test_autograd_hw.py::test_power_scalar_backward \u001B[32mPASSED\u001B[0m\u001B[32m         [ 10%]\u001B[0m\r\n",
+      "tests/hw1/test_autograd_hw.py::test_divide_backward \u001B[32mPASSED\u001B[0m\u001B[32m               [ 20%]\u001B[0m\r\n",
+      "tests/hw1/test_autograd_hw.py::test_divide_scalar_backward \u001B[32mPASSED\u001B[0m\u001B[32m        [ 30%]\u001B[0m\r\n",
+      "tests/hw1/test_autograd_hw.py::test_matmul_simple_backward \u001B[32mPASSED\u001B[0m\u001B[32m        [ 40%]\u001B[0m\r\n",
+      "tests/hw1/test_autograd_hw.py::test_matmul_batched_backward \u001B[32mPASSED\u001B[0m\u001B[32m       [ 50%]\u001B[0m\r\n",
+      "tests/hw1/test_autograd_hw.py::test_reshape_backward \u001B[32mPASSED\u001B[0m\u001B[32m              [ 60%]\u001B[0m\r\n",
+      "tests/hw1/test_autograd_hw.py::test_negate_backward \u001B[32mPASSED\u001B[0m\u001B[32m               [ 70%]\u001B[0m\r\n",
+      "tests/hw1/test_autograd_hw.py::test_transpose_backward \u001B[32mPASSED\u001B[0m\u001B[32m            [ 80%]\u001B[0m\r\n",
+      "tests/hw1/test_autograd_hw.py::test_broadcast_to_backward \u001B[32mPASSED\u001B[0m\u001B[32m         [ 90%]\u001B[0m\r\n",
+      "tests/hw1/test_autograd_hw.py::test_summation_backward \u001B[32mPASSED\u001B[0m\u001B[32m            [100%]\u001B[0m\r\n",
+      "\r\n",
+      "\u001B[32m====================== \u001B[32m\u001B[1m10 passed\u001B[0m, \u001B[33m20 deselected\u001B[0m\u001B[32m in 0.34s\u001B[0m\u001B[32m =======================\u001B[0m\r\n"
      ]
     }
    ],
@@ -341,28 +362,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
     "id": "pQqntvth8GVa",
-    "outputId": "c8bcdac7-c8e3-47ca-f450-fac21d29bfab"
+    "outputId": "c8bcdac7-c8e3-47ca-f450-fac21d29bfab",
+    "ExecuteTime": {
+     "end_time": "2024-03-20T23:26:03.851845Z",
+     "start_time": "2024-03-20T23:26:03.013734Z"
+    }
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
-      "platform darwin -- Python 3.9.7, pytest-6.2.4, py-1.10.0, pluggy-0.13.1\n",
-      "rootdir: /Users/zkolter/Dropbox/class/10-714/homework/hw1\n",
-      "plugins: pytest_check-1.0.4, anyio-2.2.0\n",
-      "collected 21 items / 20 deselected / 1 selected                                \u001b[0m\n",
-      "\n",
-      "tests/test_autograd_hw.py \u001b[32m.\u001b[0m\u001b[32m                                              [100%]\u001b[0m\n",
-      "\n",
-      "\u001b[32m======================= \u001b[32m\u001b[1m1 passed\u001b[0m, \u001b[33m20 deselected\u001b[0m\u001b[32m in 0.43s\u001b[0m\u001b[32m =======================\u001b[0m\n"
+      "\u001B[1m============================= test session starts ==============================\u001B[0m\r\n",
+      "platform linux -- Python 3.12.1, pytest-8.1.1, pluggy-1.4.0\r\n",
+      "rootdir: /home/bobboli/dlsys\r\n",
+      "plugins: anyio-4.2.0\r\n",
+      "collected 30 items / 29 deselected / 1 selected                                \u001B[0m\r\n",
+      "\r\n",
+      "tests/hw1/test_autograd_hw.py \u001B[32m.\u001B[0m\u001B[32m                                          [100%]\u001B[0m\r\n",
+      "\r\n",
+      "\u001B[32m======================= \u001B[32m\u001B[1m1 passed\u001B[0m, \u001B[33m29 deselected\u001B[0m\u001B[32m in 0.27s\u001B[0m\u001B[32m =======================\u001B[0m\r\n"
      ]
     }
    ],
@@ -412,28 +437,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
     "id": "4L37C7ez8fkM",
-    "outputId": "f2846195-0754-465c-97d7-c36a7ade8cea"
+    "outputId": "f2846195-0754-465c-97d7-c36a7ade8cea",
+    "ExecuteTime": {
+     "end_time": "2024-03-21T10:37:43.315421Z",
+     "start_time": "2024-03-21T10:37:42.424540Z"
+    }
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
-      "platform darwin -- Python 3.9.7, pytest-6.2.4, py-1.10.0, pluggy-0.13.1\n",
-      "rootdir: /Users/zkolter/Dropbox/class/10-714/homework/hw1\n",
-      "plugins: pytest_check-1.0.4, anyio-2.2.0\n",
-      "collected 21 items / 20 deselected / 1 selected                                \u001b[0m\n",
-      "\n",
-      "tests/test_autograd_hw.py \u001b[32m.\u001b[0m\u001b[32m                                              [100%]\u001b[0m\n",
-      "\n",
-      "\u001b[32m======================= \u001b[32m\u001b[1m1 passed\u001b[0m, \u001b[33m20 deselected\u001b[0m\u001b[32m in 0.47s\u001b[0m\u001b[32m =======================\u001b[0m\n"
+      "\u001B[1m============================= test session starts ==============================\u001B[0m\r\n",
+      "platform linux -- Python 3.12.1, pytest-8.1.1, pluggy-1.4.0\r\n",
+      "rootdir: /home/bobboli/dlsys\r\n",
+      "plugins: anyio-4.2.0\r\n",
+      "collected 30 items / 29 deselected / 1 selected                                \u001B[0m\r\n",
+      "\r\n",
+      "tests/hw1/test_autograd_hw.py \u001B[32m.\u001B[0m\u001B[32m                                          [100%]\u001B[0m\r\n",
+      "\r\n",
+      "\u001B[32m======================= \u001B[32m\u001B[1m1 passed\u001B[0m, \u001B[33m29 deselected\u001B[0m\u001B[32m in 0.29s\u001B[0m\u001B[32m =======================\u001B[0m\r\n"
      ]
     }
    ],
@@ -487,28 +516,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 47,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
     "id": "CpwK-c989OkI",
-    "outputId": "0f145d00-6dce-46c9-d5f4-5d72e6d65419"
+    "outputId": "0f145d00-6dce-46c9-d5f4-5d72e6d65419",
+    "ExecuteTime": {
+     "end_time": "2024-03-21T11:49:27.572279Z",
+     "start_time": "2024-03-21T11:49:26.441176Z"
+    }
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
-      "platform darwin -- Python 3.9.7, pytest-6.2.4, py-1.10.0, pluggy-0.13.1\n",
-      "rootdir: /Users/zkolter/Dropbox/class/10-714/homework/hw1\n",
-      "plugins: pytest_check-1.0.4, anyio-2.2.0\n",
-      "collected 21 items / 20 deselected / 1 selected                                \u001b[0m\n",
-      "\n",
-      "tests/test_autograd_hw.py \u001b[32m.\u001b[0m\u001b[32m                                              [100%]\u001b[0m\n",
-      "\n",
-      "\u001b[32m======================= \u001b[32m\u001b[1m1 passed\u001b[0m, \u001b[33m20 deselected\u001b[0m\u001b[32m in 0.69s\u001b[0m\u001b[32m =======================\u001b[0m\n"
+      "\u001B[1m============================= test session starts ==============================\u001B[0m\r\n",
+      "platform linux -- Python 3.12.1, pytest-8.1.1, pluggy-1.4.0\r\n",
+      "rootdir: /home/bobboli/dlsys\r\n",
+      "plugins: anyio-4.2.0\r\n",
+      "collected 30 items / 29 deselected / 1 selected                                \u001B[0m\r\n",
+      "\r\n",
+      "tests/hw1/test_autograd_hw.py \u001B[32m.\u001B[0m\u001B[32m                                          [100%]\u001B[0m\r\n",
+      "\r\n",
+      "\u001B[32m======================= \u001B[32m\u001B[1m1 passed\u001B[0m, \u001B[33m29 deselected\u001B[0m\u001B[32m in 0.54s\u001B[0m\u001B[32m =======================\u001B[0m\r\n"
      ]
     }
    ],
@@ -564,15 +597,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
     "id": "LHKC82ex9wFg",
-    "outputId": "5a319557-624e-45be-e839-3e1d30efb6f5"
+    "outputId": "5a319557-624e-45be-e839-3e1d30efb6f5",
+    "ExecuteTime": {
+     "end_time": "2024-03-21T16:08:42.556857Z",
+     "start_time": "2024-03-21T16:08:39.176157Z"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001B[1m============================= test session starts ==============================\u001B[0m\r\n",
+      "platform linux -- Python 3.12.1, pytest-8.1.1, pluggy-1.4.0\r\n",
+      "rootdir: /home/bobboli/dlsys\r\n",
+      "plugins: anyio-4.2.0\r\n",
+      "collected 30 items / 29 deselected / 1 selected                                \u001B[0m\r\n",
+      "\r\n",
+      "tests/hw1/test_autograd_hw.py \u001B[32m.\u001B[0m\u001B[32m                                          [100%]\u001B[0m\r\n",
+      "\r\n",
+      "\u001B[32m======================= \u001B[32m\u001B[1m1 passed\u001B[0m, \u001B[33m29 deselected\u001B[0m\u001B[32m in 2.72s\u001B[0m\u001B[32m =======================\u001B[0m\r\n"
+     ]
+    }
+   ],
    "source": [
     "!python3 -m pytest -l -k \"nn_epoch_ndl\""
    ]
